--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ h1 {
   cursor: pointer;
   border-radius: 5px;
   transition: background 0.3s, transform 0.3s;
+  margin: 0 6px;
 }
 
 .todo-btn:hover {
@@ -129,10 +130,21 @@ h1 {
 .delete-icon {
   cursor: pointer;
   transition: color 0.3s, transform 0.3s;
+  margin: 0 4px;
 }
 
 .edit-icon:hover,
 .delete-icon:hover {
   color: #ff6b6b;
   transform: scale(1.2);
+}
+
+
+.Todo.deleted {
+  text-decoration: line-through;
+  opacity: 0.3; 
+}
+
+.Todo.deleted p, .Todo.deleted div {
+  text-decoration: line-through;
 }
